fixxed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+body {
+  overflow-x: hidden;
+}
 
 @layer components {
   .max-container {
